<resources>
    <string name="app_name" translatable="false">Climbing training</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="category">Category</string>
    <string name="type_of_exercise">Type of exercise</string>
    <string name="equipment">Equipment</string>
    <string name="comment">Comment</string>
    <string name="exercise">Exercise</string>
    <string name="graph">Graph</string>
    <string name="training">Training</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add_the_image">Add the image</string>
    <string name="text_description">Text of the description</string>
    <string name="text_comment">Text of the comment</string>
    
    <!--Buttons-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <!--done-->

    <string name="data_successfully_added">Data are successfully added</string>
    <string name="successfully_added">are successfully added</string>
    <string name="error_added">Error when adding data</string>

    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="categories">Category</string>
    <string name="saving_image_sd">Saving of the image is impossible, SD a card isn\'t available</string>

    <string name="date">Date</string>

    <string name="add_exercise">To add exercise</string>
    <string name="choose_exercise">To choose exercise</string>
    <string name="number_approaches">Number of approaches</string>
    <string name="number_time_approach">Number of times for approach</string>
    <string name="additional_weight">Additional weight</string>
    <string name="measurement_measure">Measurement measure</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="determine_date">To determine date</string>

    <string name="option_temporarily">Sorry, this option is temporarily not realized</string>

    <!--Navigation items for drow menu-->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About application</string>
    <!-- end -->

    <string name="error">Error</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <string name="name_exercise">Name exercise</string>
    <string name="category_exercise">Category exercise</string>
    <string name="accounting_quantity">Accounting quantity</string>
    <string name="file_not_delete">it wasn\'t succeeded to delete the image from the memory stick</string>
    <string name="choose_date">Choose date</string>
    <string name="ready">Ready</string>
    <string name="trainings">Trainings</string>
    <string name="exercises">Exercises</string>
    <string name="impossible_delete_new_training">it is impossible to delete new training</string>
    <string name="training_is_deleted">training is deleted</string>


</resources>
