<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fragment_categories_entity_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/add_image" />

    <EditText
        android:id="@+id/fragment_categories_entity_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:hint="@string/name"
        android:layout_below="@+id/fragment_categories_entity_image"/>

    <EditText
        android:id="@+id/fragment_categories_entity_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:hint="@string/text_description"
        android:layout_below="@+id/fragment_categories_entity_name_edit_text"/>

    <EditText
        android:id="@+id/fragment_categories_entity_comment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:hint="@string/text_comment"
        android:layout_below="@+id/fragment_categories_entity_description_edit_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fragment_categories_entity_comment_edit_text">

        <Button
            android:id="@+id/fragment_categories_entity_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/fragment_categories_entity_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>
</RelativeLayout>