<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    style="@style/ItemMainList"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/fragment_description_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="20sp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/fragment_description_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:hint="@string/text_description"/>

    <EditText
        android:id="@+id/fragment_description_comment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:hint="@string/text_comment"/>

</LinearLayout>