<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ItemMainList"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_accounting_quantity_name"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <Button
        android:id="@+id/fragment_accounting_quantity_choose_exercise"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/fragment_accounting_quantity_name"
        android:text="@string/choose_exercise" />

    <RelativeLayout
        android:id="@+id/fragment_accounting_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_accounting_quantity_choose_exercise">

        <ImageView
            android:id="@+id/fragment_aq_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:descendantFocusability="blocksDescendants"/>

        <LinearLayout
            android:id="@+id/fragment_aq_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@+id/fragment_aq_image"
            android:layout_toRightOf="@+id/fragment_aq_image"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <TextView
                android:id="@+id/fragment_aq_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"/>

            <TextView
                android:id="@+id/fragment_aq_name_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"/>

            <TextView
                android:id="@+id/fragment_aq_type_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"/>

            <TextView
                android:id="@+id/fragment_aq_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"/>

            <TextView
                android:id="@+id/fragment_aq_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"/>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/fragment_accounting_quantity_number_approaches_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/fragment_accounting_container"
        android:text="@string/number_approaches" />

    <EditText
        android:id="@+id/fragment_accounting_quantity_number_approaches"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:layout_below="@+id/fragment_accounting_container"
        android:layout_toEndOf="@+id/fragment_accounting_quantity_number_approaches_tv"
        android:layout_toRightOf="@+id/fragment_accounting_quantity_number_approaches_tv" />

    <TextView
        android:id="@+id/fragment_accounting_quantity_number_time_approach_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/fragment_accounting_quantity_number_approaches_tv"
        android:text="@string/number_time_approach" />

    <EditText
        android:id="@+id/fragment_accounting_quantity_number_time_approach"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="number"
        android:layout_below="@+id/fragment_accounting_quantity_number_approaches"
        android:layout_toEndOf="@+id/fragment_accounting_quantity_number_time_approach_tv"
        android:layout_toRightOf="@+id/fragment_accounting_quantity_number_time_approach_tv" />

    <TextView
        android:id="@+id/fragment_accounting_quantity_additional_weight_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/fragment_accounting_quantity_number_time_approach_tv"
        android:text="@string/additional_weight" />

    <EditText
        android:id="@+id/fragment_accounting_quantity_additional_weight"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/fragment_accounting_quantity_number_time_approach"
        android:layout_toEndOf="@+id/fragment_accounting_quantity_additional_weight_tv"
        android:layout_toRightOf="@+id/fragment_accounting_quantity_additional_weight_tv" />

    <TextView
        android:id="@+id/fragment_accounting_quantity_measurement_measure_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/fragment_accounting_quantity_additional_weight_tv"
        android:text="@string/measurement_measure" />

    <Spinner
        android:id="@+id/fragment_accounting_quantity_spinner_measurement_measure"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/fragment_accounting_quantity_additional_weight"
        android:layout_toEndOf="@+id/fragment_accounting_quantity_measurement_measure_tv"
        android:layout_toRightOf="@+id/fragment_accounting_quantity_measurement_measure_tv" />

    <TextView
        android:id="@+id/fragment_accounting_quantity_distance_tv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/fragment_accounting_quantity_measurement_measure_tv"
        android:text="@string/distance" />

    <EditText
        android:id="@+id/fragment_accounting_quantity_distance"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        android:layout_below="@+id/fragment_accounting_quantity_spinner_measurement_measure"
        android:layout_toEndOf="@+id/fragment_accounting_quantity_distance_tv"
        android:layout_toRightOf="@+id/fragment_accounting_quantity_distance_tv" />

    <EditText
        android:id="@+id/fragment_accounting_quantity_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:layout_below="@+id/fragment_accounting_quantity_distance"
        android:hint="@string/text_description"/>

    <EditText
        android:id="@+id/fragment_accounting_quantity_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:layout_below="@+id/fragment_accounting_quantity_description"
        android:hint="@string/text_comment"/>

    <!--<TimePicker-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/timePicker"-->
    <!--android:layout_below="@+id/fragment_accounting_quantity_distance_tv"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="32dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_accounting_quantity_comment"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/fragment_accounting_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/ok" />

        <Button
            android:id="@+id/fragment_accounting_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>
</RelativeLayout>