<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ExpandableListView
        android:id="@+id/fragment_exercises_exlist_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indicatorLeft="250dp"
        android:indicatorRight="300dp" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fragment_exercises_actions_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        fab:fab_addButtonColorNormal="@color/accent_color"
        fab:fab_addButtonColorPressed="@color/light_accent_color"
        fab:fab_addButtonPlusIconColor="@color/text_icon"
        fab:fab_labelStyle="@style/menu_label_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_exercises_category_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent_color"
            fab:fab_colorPressed="@color/light_accent_color"
            fab:fab_icon="@drawable/icon_plus"
            fab:fab_size="normal"
            fab:fab_title="@string/category" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_exercises_exercise_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent_color"
            fab:fab_colorPressed="@color/light_accent_color"
            fab:fab_icon="@drawable/icon_plus"
            fab:fab_size="normal"
            fab:fab_title="@string/exercise" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_exercises_type_of_exercise_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent_color"
            fab:fab_colorPressed="@color/light_accent_color"
            fab:fab_icon="@drawable/icon_plus"
            fab:fab_size="normal"
            fab:fab_title="@string/type_of_exercise" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_exercises_equipment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/accent_color"
            fab:fab_colorPressed="@color/light_accent_color"
            fab:fab_icon="@drawable/icon_plus"
            fab:fab_size="normal"
            fab:fab_title="@string/equipment" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>