<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/aq_list_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <ImageView
        android:id="@+id/aq_list_layout_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/aq_list_title"
        android:layout_centerVertical="true" />

    <TableLayout
        android:id="@+id/aq_list_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aq_list_title"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_toEndOf="@+id/aq_list_layout_image"
        android:layout_toRightOf="@+id/aq_list_layout_image"
        android:orientation="vertical">

        <TableRow>

            <TextView
                android:id="@+id/aq_list_layout_number_approaches_tv"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/number_approaches" />

            <TextView
                android:id="@+id/aq_list_layout_number_approaches"
                android:layout_width="match_parent"
                android:layout_height="24dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/aq_list_layout_number_time_approach_tv"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/number_time_approach" />

            <TextView
                android:id="@+id/aq_list_layout_number_time_approach"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/aq_list_layout_additional_weight_tv"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/additional_weight" />

            <TextView
                android:id="@+id/aq_list_layout_additional_weight"
                android:layout_width="match_parent"
                android:layout_height="24dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/aq_list_layout_distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/aq_list_layout_distance"
                android:layout_width="match_parent"
                android:layout_height="24dp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>